--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -2,5 +2,5 @@ writer = file
 writer.file =  #{tinylog.directory}/server.log
 writer.buffered = false
 writer.append = true
-writer.charset  = UTF-8    
-writer.format = {date}: {class}.{method}()\t{message}
+writer.charset  = UTF-8
+writer.format = {date} : {message}
